# TestProjects

./: Notes.md  README.md
CPP/: ThreadsAndLambdas.cpp
CPP/Pipeline/: CMakeLists.txt
CPP/Pipeline/Messages/: CMakeLists.txt  Messages.cpp  Messages.h  Pipe.cpp  Pipe.h  Serializable.cpp  Serializable.h
CPP/Pipeline/Messages/test/: CMakeLists.txt  test.cpp
CPP/Pipeline/PipelineApp/: CMakeLists.txt  Pipeline.cpp
CPP/ThreadTest/source/: bubblesort.cpp  bubblesort.h  main.cpp  mythread.cpp  mythread.h
CPP/binmetadata/: howto.txt  main.cpp
CPP/dlopen/: build.sh  clean.sh  main.cpp  math.cpp
CPP/dynlibtest/: Makefile  README.md  app.cpp  testlib.cpp
CPP/errorTest/: Makefile  main.cpp
CPP/libTest/source/: CMakeLists.txt
CPP/libTest/source/App/: CMakeLists.txt  main.cpp
CPP/libTest/source/interface/: greeting.h
CPP/libTest/source/lib/: CMakeLists.txt
CPP/libTest/source/lib/en/: greeting.cpp
CPP/libTest/source/lib/no/: CMakeLists.txt  greeting.cpp
CPP/maptest/: CMakeLists.txt  main.cpp
CPP/portNumber/: Makefile  main.cpp
CPP/serializer/: main.cpp
CPP/webserver/: main.cpp
RPi/WiFiRouter/: README.md
RPi/WiFiRouter/etc/: dhcpcd.conf  dnsmasq.conf  iptables.rules
RPi/WiFiRouter/etc/hostapd/: hostapd.conf
RPi/WiFiRouter/etc/network/if-pre-up.d/: iptables
RPi/mqttLeds/: cycle.py
RPi/pwmIC/: .Makefile.swp  Makefile  gpio.cpp  gpio.h  main.cpp  pwm.cpp  pwm.h
gstreamer/: recordscreen.sh  screencapture.sh  startXvfb.sh
